<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_income"
            android:title="@string/menu_income" />
        <item
            android:id="@+id/nav_income_edit"
            android:title="@string/menu_income_edit" />
        <item
            android:id="@+id/nav_expense"
            android:title="@string/menu_expense" />
        <item
            android:id="@+id/nav_expense_edit"
            android:title="@string/menu_expense_edit" />

    </group>
</menu>