<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="homeViewModel"
            type="hu.andras.mobilbeadando.ui.home.HomeViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="455dp"
        android:layout_height="781dp"
        tools:context=".ui.home.HomeFragment">

        <TextView
            android:id="@+id/text_balance"
            android:layout_width="135dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/balance"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_balance_amount"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@{homeViewModel.balance.toString()}"
            android:textSize="30sp"
            android:textAlignment="viewEnd"
            app:layout_constraintStart_toEndOf="@+id/text_balance"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_income"
            android:layout_width="135dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="250dp"
            android:text="@string/income_amount"
            android:textSize="30sp"
            android:textColor="#00ff00"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_balance" />

        <TextView
            android:id="@+id/text_income_amount"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="250dp"
            android:text="@{homeViewModel.incomeAmount.toString()}"
            android:textSize="30sp"
            android:textColor="#00ff00"
            android:textAlignment="viewEnd"
            app:layout_constraintStart_toEndOf="@+id/text_income"
            app:layout_constraintTop_toBottomOf="@+id/text_balance_amount" />

        <TextView
            android:id="@+id/text_expense"
            android:layout_width="135dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="250dp"
            android:text="@string/expense_amount"
            android:textSize="30sp"
            android:textColor="#ff0000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_income" />

        <TextView
            android:id="@+id/text_expense_amount"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="250dp"
            android:text="@{homeViewModel.expenseAmount.toString()}"
            android:textSize="30sp"
            android:textColor="#ff0000"
            android:textAlignment="viewEnd"
            app:layout_constraintStart_toEndOf="@+id/text_expense"
            app:layout_constraintTop_toBottomOf="@+id/text_income_amount" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>